<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ibm.watson.diet_on_the_go.Set_DIET_Restrictions" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <MultiAutoCompleteTextView
        android:id="@+id/diet_restriction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:text="" >

        <requestFocus />
    </MultiAutoCompleteTextView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:layout_marginRight="30dp"
        android:layout_marginTop="29dp"
        android:text="@string/DIET_Restriction"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="71dp"
        android:layout_toLeftOf="@+id/textView1"
        android:onClick="@string/title_activity_go_to_dish"
        android:text="@string/title_activity_go_to_dish" />

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/diet_restriction"
        android:layout_centerVertical="true"
        android:ems="10"
        android:text="@string/samplediet_restriction" />

</RelativeLayout>